# s2d2s

./: LICENSE  README.md  __init__.py  pyproject.toml  setup.cfg  test_main.py  test_onnx.py  test_tensorflow.py
.github/workflows/: tests.yml
s2d2s/: __init__.py
